[tool.poetry]
name = "bdsm-bot"
version = "0.1.0"
description = "Broadcast Distribution & Scheduling Manager — Telegram bot for managing channel broadcasts and scheduled posts"
authors = ["Admin"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.15"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.14"
pydantic-settings = "^2.7"
apscheduler = "^3.10"
pytz = "^2024.1"
aiohttp = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
